update contact.html from testing site

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kabir's Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- Navigation -->
@@ -18,8 +18,8 @@
     <!-- Contact form -->
     <form action="mailto:kabirbose2004@gmail.com">
       <h1 class="contact-h">Contact Me</h1>
-      <input placeholder="Your name" type="text" name="name" />
-      <input placeholder="Your email" type="email" name="email" />
+      <input placeholder="Your name" type="text" name="name">
+      <input placeholder="Your email" type="email" name="email">
       <textarea placeholder="Any additional info..."></textarea>
       <button type="submit" class="submit-btn">Send</button>
     </form>
