--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kabir's Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- Navigation -->
@@ -18,7 +18,7 @@
     <div class="container">
       <!-- Picture -->
       <div>
-        <img src="kabir.jpg" alt="A picture of me!" class="intro-img" />
+        <img src="kabir.jpg" alt="A picture of me!" class="intro-img">
       </div>
 
       <!-- Paragraph -->
@@ -29,14 +29,14 @@
         (mostly soccer and swimming), as well as playing video games! My
         favourite food is shawarma but tacos are a close second. I also love
         Batman and my favourite movie of all time is "Batman Begins".
-        <br />
-        <br />
+        <br>
+        <br>
         Here is my favourite clip from "Batman Begins"!
       </p>
 
       <!-- Video -->
       <video controls poster="poster.jpg">
-        <source src="video.mp4" type="video/mp4" />
+        <source src="video.mp4" type="video/mp4">
       </video>
     </div>
 
